Implement error layout page and gracefully handling exceptions